--- a/05-Guess-My-Number/starter/style.css
+++ b/05-Guess-My-Number/starter/style.css
@@ -59,8 +59,8 @@ h1 {
 .number {
   background: #eee;
   color: #333;
-  font-size: 6rem;
-  width: 15rem;
+  font-size: 4rem;
+  width: 10%;
   padding: 3rem 0rem;
   text-align: center;
   position: absolute;
